# windows-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  MANIFEST.in  README.md  build_windows_exe.bat  conftest.py  pyproject.toml  requirements.txt  run_all.bat  run_backtests.bat  run_live.bat  run_scheduler.bat  run_server.bat  setup.py  setup_env.bat
.github/workflows/: ci.yml
docs/: improvement_plan.md
moex_bot/: .env.example  Dockerfile  __init__.py  config.yaml  requirements.txt  run_all.py  run_backtests.py  run_diagnostics.py  run_live.py  run_scheduler.py  run_server.py  run_telegram_bot.py  sandbox_test.py  sandbox_test_trade.py  universe_ru.py  update_data.py
moex_bot/config.d/: README.md  schedule.yaml  secrets.example.yaml  strategies.yaml
moex_bot/core/: alerts.py  backtester.py  broker.py  config.py  config_loader.py  data_provider.py  engine.py  future_utils.py  hyperopt.py  journal.py  live_loop.py  live_trading.py  logging_config.py  metrics.py  monitoring.py  order_state.py  portfolio.py  portfolio_manager.py  risk.py  scheduler.py  settings.py  storage.py  strategy_selector.py  telegram_bot.py  tinkoff_api_provider.py  tinkoff_stream_provider.py  translations.py  walk_forward.py
moex_bot/core/adapters/: rest_tinkoff.py  stream_tinkoff.py
moex_bot/core/utils/: figi.py
moex_bot/data/: SBER_hour_90d.csv
moex_bot/gui/: __init__.py  desktop.py
moex_bot/reporting/: report_builder.py
moex_bot/results/: auto_report.html  backtest_report.csv  backtest_report.json  best_strategies_top3.csv  best_strategies_top3.json  correlation_matrix.csv  correlation_matrix.json  history.db  portfolio_metrics.csv  portfolio_metrics.json  walk_forward_report.csv  walk_forward_report.json
moex_bot/strategies/: __init__.py  adx_trend.py  arbitrage.py  atr_stop.py  atr_trend.py  base.py  bollinger_bands.py  breakout.py  lstm_predict.py  macd.py  mean_reversion.py  ml_predict.py  momentum.py  moving_average_crossover.py  news_sentiment.py  pair_trading.py  rsi.py  sma.py  supertrend.py  volatility_filter.py
moex_bot/telegram_ext/: bot.py  commands.py
moex_bot/tools/: __init__.py  build.py
moex_bot/ui/: __init__.py  desktop.py
moex_bot/web/: app.py  dashboard.py
moex_bot/web/static/: style.css
packaging/: desktop_entry.py  windows_desktop.spec
tests/: test_backtester.py  test_data_provider.py  test_figi.py  test_figi_utils.py  test_live_trading.py  test_metrics.py  test_monitoring.py  test_risk.py  test_risk_properties.py  test_signals.py  test_strategy_selector.py  test_telegram_bot_integration.py
