[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moex-bot"
version = "0.5.0"
description = "Automated MOEX trading bot via Tinkoff Invest API"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Your Name"}]
dependencies = [
  "pandas",
  "numpy",
  "apscheduler",
  "prometheus-client",
  "tinkoff-invest",
  "python-telegram-bot",
  "fastapi",
  "uvicorn",
  "pydantic>=1.10,<3",
  # Additional runtime dependencies
  "pyyaml>=6.0",           # YAML configuration support
  "python-dotenv>=1.0",    # Load environment variables from .env
  "matplotlib>=3.7",       # Plotting library for reports
  "seaborn>=0.12",         # Statistical plotting used in reports
  "scikit-learn>=1.3",     # Machine learning utilities (clustering, metrics)
  "plotly>=5.18",          # Interactive charts in reports
  "dash>=2.15",            # Dash dashboard and desktop reuse
  "requests>=2.31",        # HTTP client for external APIs
  "python-multipart>=0.0.9" # Parse form-data in FastAPI (upload endpoints)
]

[project.scripts]
moex-live = "moex_bot.run_live:main"
moex-backtests = "moex_bot.run_backtests:main"
moex-server = "moex_bot.run_server:main"
moex-all = "moex_bot.run_all:main"
moex-diagnostics = "moex_bot.run_diagnostics:main"
moex-desktop = "moex_bot.gui.desktop:main"

[project.optional-dependencies]
packaging = [
  "pyinstaller>=6.3",
  "pefile>=2023.2.7; sys_platform == 'win32'",
]

[tool.black]
line-length = 100
target-version = ["py310","py311"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203","W503"]
